# Orbit-M

./: .gitignore  CMakeLists.txt  ReadMe.md
include/: loadScenario.hpp  mech.hpp  project.hpp
rsc/: scenarios.json
src/: loadScenario.cpp  main.cpp  mech.cpp  project.cpp
